--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -16,7 +16,7 @@ spec:
         app: devsecops
     spec:
       containers:
-      - image: replace
+      - image: vignesh0590/numeric-app:latest
         name: devsecops-container
 ---
 apiVersion: v1
@@ -27,9 +27,9 @@ metadata:
   name: devsecops-svc
 spec:
   ports:
-  - port: 8080
+  - port: 9080
     protocol: TCP
-    targetPort: 8080
+    targetPort: 9080
   selector:
     app: devsecops
   type: NodePort
